k8s/hardened/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hardened
  labels:
    environment: hardened
    security-level: hardened
    security-profile: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
